--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Luxury Houses</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
+
+    <header class="header">
+        <div class="header__bar container">
+            <div class="header__logo">
+                <img src="build/img/logo.svg" alt="logo real estate">
+            </div>
+
+            <nav class="nav">
+                <a class="nav__link" href="#">Us</a>
+                <a class="nav__link" href="#">Properties</a>
+                <a class="nav__link" href="#">Blog</a>
+                <a class="nav__link" href="#">Testimonials</a>
+                <a class="nav__link" href="#">Contact</a>
+            </nav>
+        </div>
+
+        <div class="container">
+            <div class="header__content">
+                <h1 class="header__heading">Find your luxury home at the best price.</h1>
+                <p class="header__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor eius, dicta explicabo recusandae ea molestias, tempore accusantium molestiae.</p>
+                <img src="build/img/imagenHeader.jpg" alt="header image" class="header__image">
+            </div>
+        </div>
+  
+    </header>
     
 </body>
 </html>
