main section (properties) done

--- a/index.html
+++ b/index.html
@@ -35,6 +35,86 @@
         </div>
   
     </header>
+
+    <main class="properties container">
+        <h2 class="properties__heading">Our <span>Properties</span></h2>
+
+        <div class="properties__grid">
+            <div class="propertie">
+                <div class="propertie__img">
+                    <h3 class="propertie__name">House with 3 rooms</h3>
+                </div>
+                <div class="propertie__content">
+                    <p class="propertie__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sint perspiciatis, sit, labore consectetur tempore vero harum accusamus nisi modi distinctio alias excepturi debitis aliquid magnam deleniti voluptatibus earum dignissimos!</p>
+                    <p class="propertie__price">$1,200,000</p>
+
+                    <a class="propertie__link" href="#">View Propertie</a>
+                </div>
+            </div> <!--.propertie-->
+
+            <div class="propertie">
+                <div class="propertie__img">
+                    <h3 class="propertie__name">House with 3 rooms</h3>
+                </div>
+                <div class="propertie__content">
+                    <p class="propertie__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sint perspiciatis, sit, labore consectetur tempore vero harum accusamus nisi modi distinctio alias excepturi debitis aliquid magnam deleniti voluptatibus earum dignissimos!</p>
+                    <p class="propertie__price">$1,200,000</p>
+
+                    <a class="propertie__link" href="#">View Propertie</a>
+                </div>
+            </div> <!--.propertie-->
+
+            <div class="propertie">
+                <div class="propertie__img">
+                    <h3 class="propertie__name">House with 3 rooms</h3>
+                </div>
+                <div class="propertie__content">
+                    <p class="propertie__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sint perspiciatis, sit, labore consectetur tempore vero harum accusamus nisi modi distinctio alias excepturi debitis aliquid magnam deleniti voluptatibus earum dignissimos!</p>
+                    <p class="propertie__price">$1,200,000</p>
+
+                    <a class="propertie__link" href="#">View Propertie</a>
+                </div>
+            </div> <!--.propertie-->
+
+            <div class="propertie">
+                <div class="propertie__img">
+                    <h3 class="propertie__name">House with 3 rooms</h3>
+                </div>
+                <div class="propertie__content">
+                    <p class="propertie__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sint perspiciatis, sit, labore consectetur tempore vero harum accusamus nisi modi distinctio alias excepturi debitis aliquid magnam deleniti voluptatibus earum dignissimos!</p>
+                    <p class="propertie__price">$1,200,000</p>
+
+                    <a class="propertie__link" href="#">View Propertie</a>
+                </div>
+            </div> <!--.propertie-->
+
+            <div class="propertie">
+                <div class="propertie__img">
+                    <h3 class="propertie__name">House with 3 rooms</h3>
+                </div>
+                <div class="propertie__content">
+                    <p class="propertie__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sint perspiciatis, sit, labore consectetur tempore vero harum accusamus nisi modi distinctio alias excepturi debitis aliquid magnam deleniti voluptatibus earum dignissimos!</p>
+                    <p class="propertie__price">$1,200,000</p>
+
+                    <a class="propertie__link" href="#">View Propertie</a>
+                </div>
+            </div> <!--.propertie-->
+
+            <div class="propertie">
+                <div class="propertie__img">
+                    <h3 class="propertie__name">House with 3 rooms</h3>
+                </div>
+                <div class="propertie__content">
+                    <p class="propertie__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut sint perspiciatis, sit, labore consectetur tempore vero harum accusamus nisi modi distinctio alias excepturi debitis aliquid magnam deleniti voluptatibus earum dignissimos!</p>
+                    <p class="propertie__price">$1,200,000</p>
+
+                    <a class="propertie__link" href="#">View Propertie</a>
+                </div>
+            </div> <!--.propertie-->
+        </div> <!--propertie__grid-->
+    </main>
+
+
     
 </body>
 </html>
