section best done

--- a/index.html
+++ b/index.html
@@ -114,7 +114,17 @@
         </div> <!--propertie__grid-->
     </main>
 
+    <section class="best">
+        <div class="best__grid containe">
+            <div class="best__content">
+                <h3 class="best__heading">Distinguished Propertie</h3>
+                <p class="best__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae eligendi rem eum officia quasi similique explicabo debitis corporis, dolore corrupti ratione, facilis laudantium? Voluptas omnis dolores aliquid ipsa quisquam neque!</p>
 
+                <p class="best__price">1,200,000</p>
+                <a class="best__link" href="#">View Propertie</a>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
