testimonials-blog section done

--- a/index.html
+++ b/index.html
@@ -125,6 +125,67 @@
             </div>
         </div>
     </section>
+
+    <div class="testimonials-blog container">
+        <section class="testimonials-blog__testimonials">
+            <h2 class="testimonials-blog__heading">Our Clients Say</h2>
+
+            <div class="testimonial">
+                <img src="build/img/testimonial.jpg" alt="testimonials image" class="testimonial__img">
+
+                <div class="testimonial__content">
+                    <p class="testimonial__name">Smith Family</p>
+                    <p class="testimonial__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit eum officia doloribus quaerat maxime molestias exercitationem, aliquam ipsam praesentium cumque et iusto. Dolore autem aperiam nesciunt obcaecati saepe necessitatibus?</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials-blog__blog">
+            <h2 class="testimonials-blog__heading">Our Blog</h2>
+
+            <div class="blog">
+                <div class="blog__img-container">
+                    <img src="build/img/blog_1.jpg" alt="blog image" class="blog__img">
+                </div>
+
+                <div class="blog__content">
+                    <h3 class="blog__name">Title</h3>
+                    <p class="blog__meta">Posted by Luxury Houses</p>
+                    <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime ratione amet veritatis mollitia officiis debitis reprehenderit,</p>
+                    <a href="#" class="blog__link">Read Article</a>
+                </div>
+            </div>
+
+            <div class="blog">
+                <div class="blog__img-container">
+                    <img src="build/img/blog_2.jpg" alt="blog image" class="blog__img">
+                </div>
+
+                <div class="blog__content">
+                    <h3 class="blog__name">Title</h3>
+                    <p class="blog__meta">Posted by Luxury Houses</p>
+                    <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime ratione amet veritatis mollitia officiis debitis reprehenderit,</p>
+                    <a href="#" class="blog__link">Read Article</a>
+                </div>
+            </div>
+
+            <div class="blog">
+                <div class="blog__img-container">
+                    <img src="build/img/blog_3.jpg" alt="blog image" class="blog__img">
+                </div>
+
+                <div class="blog__content">
+                    <h3 class="blog__name">Title</h3>
+                    <p class="blog__meta">Posted by Luxury Houses</p>
+                    <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime ratione amet veritatis mollitia officiis debitis reprehenderit,</p>
+                    <a href="#" class="blog__link">Read Article</a>
+                </div>
+            </div>
+
+
+        </section>
+        
+    </div>
     
 </body>
 </html>
